# cmake-mods

./: .gitignore  .version.cmake  CHANGELOG  CMakeLists.txt  README.md
.devcontainer/: .dockerignore
.github/: constants.env
.github/workflows/: cmake.yml
ci/: help.md
cmake/: auto-option.cmake  config-base.h.in  cxx-compilers-per-project.cmake  cxx-detect-compilers.cmake  cxx-macros.cmake  debug-cmd.cmake  detect-systems.cmake  dummy-project.cmake  lexer-tools.cmake  llvm-helpers.cmake  load-catch2.cmake  load-cmdr-cxx.cmake  load-flex.cmake  load-llvm.cmake  package-deb.cmake  package-dmg.cmake  package-rpm.cmake  packaging.cmake  prerequisites.cmake  target-dirs.cmake  utils.cmake  versions-extract.py  versions-gen.cmake
cmake/Modules/: FindSanitizers.cmake  asan-wrapper
include/: cmake-mods.hh
include/cmake-mods/: cm-all.hh
src/: main.cc
test/: CMakeLists.txt  small.cc
